[gd_scene load_steps=3 format=2]

[ext_resource path="res://squares/Player.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[node name="Player" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TransitionTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Player_body_exited"]
[connection signal="timeout" from="TransitionTimer" to="." method="_on_TransitionTimer_timeout"]
